--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -1,51 +1,16 @@
 {% extends 'base.html.twig' %}
 
 
+{% block title %}Genus : {{name}}{% endblock %}
+{% block body %}
 
-
-        {% block body %}
-<hr>
- <p>  
-{{name}}
-<hr>
-
-{{dump()}} </p>
-
-  <p>  
-{{'expresion'}}
-
-{% set foo = 'bar' %}
-
-    {# displays bar #}
-{{ foo }}
-
-
-<hr>
-{% for note in notes %}
-    {{note|upper }}
-{% endfor %}
-
-<br>
-<hr>
-<br>
-{% for note in notes %}
-    {{note|lower }}
-{% endfor %}
-
-
- </p>
-<hr>
+<h1>The Genus {{ name }}</h1>
 <ul>
-    
-{% for note in notes%}
-    <li>{{note}}</li>
-{% endfor %}
 
+    {% for note in notes %}
+
+        <li>{{ note }}</li>
+
+    {% endfor %}
 </ul>
-
-
-
-
-
-        {% endblock %}
-       
+{% endblock %}
