--- a/app/Resources/views/genus/show.html.twig
+++ b/app/Resources/views/genus/show.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Genus {{ name }}{% endblock %}
 
 {% block body %}
+
+   {# <a href="/genus/{{name}}/notes"> Json Notes</a>#}
+     <a href={{path('genus_show_notes',{'genusName':name})}}> Json Notes</a>
     <h2 class="genus-name">{{ name }}</h2>
     <div class="sea-creature-container">
         <div class="genus-photo"></div>
@@ -21,18 +24,20 @@
         <h2 class="notes-header">Notes</h2>
         <div><i class="fa fa-plus plus-btn"></i></div>
     </div>
-    <section id="cd-timeline">
-        {% for note in notes %}
+    {# 
+     <section id="cd-timeline">
+        {% for note in /genus/{{name}}/notes %}
             <div class="cd-timeline-block">
                 <div class="cd-timeline-img">
-        			<img src="{{ asset('images/leanna.jpeg') }}" class="img-circle" alt="Leanna!">
-        		</div>
+                    <img src="{{ asset('images/leanna.jpeg') }}" class="img-circle" alt="Leanna!">
+                </div>
                 <div class="cd-timeline-content">
-        			<h2><a href="#">AquaPelham</a></h2>
-        			<p>{{ note }}</p>
-        			<span class="cd-date">Dec. 10, 2015</span>
-        		</div>
+                    <h2><a href="#">AquaPelham</a></h2>
+                    <p>{{ note }}</p>
+                    <span class="cd-date">Dec. 10, 2015</span>
+                </div>
             </div>
         {% endfor %}
     </section>
+     #}
 {% endblock %}
